apps/IngressRoute-ArgoCD.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute

metadata:
  name: argocd-dashboard
  namespace: argocd

  annotations:
    argocd.argoproj.io/sync-wave: "2"

spec:
  entryPoints:
    - websecure

  routes:
    - kind: Rule
      match: Host(`argocd.casa.chenchik.me`)

      services:
        - name: argocd-server
          namespace: argocd
          port: 8080

  tls:
    certResolver: acme-http
