apps/IngressRoute-Traefik.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute

metadata:
  name: traefik-dashboard
  namespace: traefik

  annotations:
    argocd.argoproj.io/sync-wave: "2"

spec:
  entryPoints:
    - websecure

  routes:
    - match: Host(`traefik.casa.chenchik.me`)
      kind: Rule

      services:
        - name: api@internal
          kind: TraefikService

  tls:
    certResolver: acme-http
